--- a/resource.language.es_es/resources/strings.po
+++ b/resource.language.es_es/resources/strings.po
@@ -9491,7 +9491,7 @@ msgstr "%s a %s"
 
 msgctxt "#21470"
 msgid "%s [%d]"
-msgstr "[%d] %s"
+msgstr "%s [%d]"
 
 msgctxt "#21471"
 msgid "On first entry"
