resource.images.moviegenreicons.poster 0.0.5

--- a/resource.images.moviegenreicons.poster/changelog.txt
+++ b/resource.images.moviegenreicons.poster/changelog.txt
@@ -1,7 +1,10 @@
 v0.0.5
-- Set compile flag
+- Use baseline JPEG
 
 v0.0.4
+- Set compile flag
+
+v0.0.3
 - Add compile flag for packaging
 
 v0.0.2
