resource images - fix texture packer issues

--- a/resource.images.moviegenreicons.coloured/changelog.txt
+++ b/resource.images.moviegenreicons.coloured/changelog.txt
@@ -1,3 +1,6 @@
+v0.0.7
+- Fix potential texture issues
+
 v0.0.6
 - Add info file
 
@@ -6,6 +9,9 @@ v0.0.5
 
 v0.0.4
 - Add compile flag for packaging
+
+v0.0.3
+- No change
 
 v0.0.2
 - Compress into XBT file
