--- a/resource.images.studios.white/changelog.txt
+++ b/resource.images.studios.white/changelog.txt
@@ -1,3 +1,12 @@
+v0.0.13
+- Added several new logos
+
+v0.0.12
+- Added several new logos
+
+v0.0.11
+- Added several new logos
+
 v0.0.10
 - Added several new logos
 
