[game.controller.atari.7800.*] 1.0.7

--- a/game.controller.atari.7800.gamepad/resources/language/resource.language.en_gb/strings.po
+++ b/game.controller.atari.7800.gamepad/resources/language/resource.language.en_gb/strings.po
@@ -29,25 +29,37 @@ msgid "Button 2"
 msgstr ""
 
 msgctxt "#30003"
-msgid "Joystick"
+msgid "Up"
 msgstr ""
 
 msgctxt "#30004"
-msgid "Reset"
+msgid "Right"
 msgstr ""
 
 msgctxt "#30005"
-msgid "Select"
+msgid "Down"
 msgstr ""
 
 msgctxt "#30006"
-msgid "Pause"
+msgid "Left"
 msgstr ""
 
 msgctxt "#30007"
-msgid "Left Difficulty A"
+msgid "Reset"
 msgstr ""
 
 msgctxt "#30008"
-msgid "Right Difficulty B"
+msgid "Select"
+msgstr ""
+
+msgctxt "#30009"
+msgid "Pause"
+msgstr ""
+
+msgctxt "#30010"
+msgid "Left Difficulty"
+msgstr ""
+
+msgctxt "#30011"
+msgid "Right Difficulty"
 msgstr ""
